--- a/Examples/SnapinsSDKExample/SnapinsSDKExample/Base.lproj/Main.storyboard
+++ b/Examples/SnapinsSDKExample/SnapinsSDKExample/Base.lproj/Main.storyboard
@@ -1,12 +1,9 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -19,42 +16,34 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="7yv-ap-ZDi">
-                                <rect key="frame" x="24" y="48" width="327" height="233.5"/>
+                            <stackView opaque="NO" contentMode="right" distribution="fillEqually" alignment="bottom" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="7yv-ap-ZDi">
+                                <rect key="frame" x="28" y="834" width="358" height="42"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5zg-3k-KYZ">
-                                        <rect key="frame" x="73" y="0.0" width="181" height="30"/>
-                                        <state key="normal" title="Knowledge Support Home"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5zg-3k-KYZ" customClass="mybutton">
+                                        <rect key="frame" x="0.0" y="0.0" width="175" height="42"/>
+                                        <color key="tintColor" red="0.82745098039999998" green="0.074509803920000006" blue="0.20392156859999999" alpha="1" colorSpace="calibratedRGB"/>
+                                        <inset key="contentEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
+                                        <state key="normal" image="book.fill" catalog="system"/>
                                         <connections>
                                             <action selector="startKnowledge:" destination="BYZ-38-t0r" eventType="touchUpInside" id="5xI-ef-9gi"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Y1-CW-7Tp">
-                                        <rect key="frame" x="112" y="38" width="103" height="30"/>
-                                        <state key="normal" title="Case Publisher"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Y1-CW-7Tp">
+                                        <rect key="frame" x="183" y="0.0" width="175" height="42"/>
+                                        <color key="tintColor" red="0.82745098039999998" green="0.074509803920000006" blue="0.20392156859999999" alpha="1" colorSpace="calibratedRGB"/>
+                                        <inset key="contentEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
+                                        <state key="normal" image="message.fill" catalog="system">
+                                            <color key="titleColor" red="0.82745098039999998" green="0.074509803920000006" blue="0.20392156859999999" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
                                         <connections>
-                                            <action selector="startCases:" destination="BYZ-38-t0r" eventType="touchUpInside" id="kmg-fl-8zs"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dyw-X6-CIS">
-                                        <rect key="frame" x="109" y="76" width="109" height="30"/>
-                                        <state key="normal" title="Live Agent Chat"/>
-                                        <connections>
-                                            <action selector="startChat:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Cmx-Gr-QcP"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AYp-ZN-uWK">
-                                        <rect key="frame" x="148.5" y="114" width="30" height="30"/>
-                                        <state key="normal" title="SOS"/>
-                                        <connections>
-                                            <action selector="startSOS:" destination="BYZ-38-t0r" eventType="touchUpInside" id="sug-Vw-73p"/>
+                                            <action selector="startChat:" destination="BYZ-38-t0r" eventType="touchUpInside" id="YAi-5Y-NoP"/>
                                         </connections>
                                     </button>
                                     <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Oops. It looks like you haven't enabled any features from the SnapinsConstants class... Check out that class to get started..." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="84B-OQ-HU6">
-                                        <rect key="frame" x="0.0" y="152" width="327" height="81.5"/>
+                                        <rect key="frame" x="358" y="21.5" width="0.0" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -62,24 +51,27 @@
                                 </subviews>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.98039215686274506" green="0.98039215686274506" blue="0.98039215686274506" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailingMargin" secondItem="7yv-ap-ZDi" secondAttribute="trailing" constant="8" id="11Q-yd-pYy"/>
                             <constraint firstItem="7yv-ap-ZDi" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="8" id="4Or-sx-SBs"/>
-                            <constraint firstItem="7yv-ap-ZDi" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="28" id="InH-3d-qSD"/>
+                            <constraint firstItem="7yv-ap-ZDi" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="790" id="InH-3d-qSD"/>
                             <constraint firstItem="7yv-ap-ZDi" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="neQ-Im-0LQ"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="casesButton" destination="4Y1-CW-7Tp" id="6xG-cX-Yts"/>
-                        <outlet property="chatButton" destination="dyw-X6-CIS" id="mRF-0T-S7b"/>
+                        <outlet property="chatButton" destination="4Y1-CW-7Tp" id="Eon-Ti-rpl"/>
                         <outlet property="knowledgeButton" destination="5zg-3k-KYZ" id="7PD-aA-gsW"/>
                         <outlet property="nothingEnabledLabel" destination="84B-OQ-HU6" id="IOC-UP-Ucz"/>
-                        <outlet property="sosButton" destination="AYp-ZN-uWK" id="wQ0-cE-WjO"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="143" y="134"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="book.fill" catalog="system" width="128" height="102"/>
+        <image name="message.fill" catalog="system" width="128" height="113"/>
+    </resources>
 </document>
